tests/ui/test_unexpected_lit.stderr
error: Unexpected literal type `string`
 --> $DIR/test_unexpected_lit.rs:4:20
  |
4 | #[shorthand(enable("string"))]
  |                    ^^^^^^^^
